--- a/flyway.conf
+++ b/flyway.conf
@@ -43,7 +43,7 @@ flyway.url=jdbc:sqlserver://127.0.0.1:1433;databasename=FlyWayDB
 flyway.user=SA
 
 # Password to use to connect to the database. Flyway will prompt you to enter it if not specified.
-flyway.password=Pa$$w0rd
+flyway.password=******
 
 # Comma-separated list of schemas managed by Flyway. These schema names are case-sensitive.
 # (default: The default schema for the datasource connection)
